# gtnh-utils

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  tool.py
examples/: alloy_smelter.yaml  alloy_smelter_pools.yaml
gtnh_utils/: cli.py
gtnh_utils/modes/import_recipes/: __init__.py
gtnh_utils/modes/recipes/: formatter.py  loader.py  model.py  solver.py  writer.py
gtnh_utils/modes/tint/: tinter.py
inputs/recipes/: alloy_smelter.yaml  mixer.yaml
tests/: test_loader.py  test_model.py  test_solver.py
